[gd_scene load_steps=11 format=3 uid="uid://28t7kcmiqbt4"]

[ext_resource type="Script" uid="uid://wx2fs1n46gsx" path="res://scripts/function_editor/f_toolbar.gd" id="1_0spem"]
[ext_resource type="Texture2D" uid="uid://d00wdfqisfitt" path="res://assets/black-grid.jpg" id="1_2yhh1"]
[ext_resource type="Texture2D" uid="uid://cmkrolah68oud" path="res://assets/icons-default.png" id="1_hla8g"]
[ext_resource type="Theme" uid="uid://crc76siuhl1o3" path="res://assets/godot_res/themes/main.tres" id="2_6wip8"]
[ext_resource type="Script" uid="uid://cdaqsy25qlsb5" path="res://scripts/function_editor/bg_blueprint.gd" id="5_3b5a2"]
[ext_resource type="PackedScene" uid="uid://bw127lhv5d1f4" path="res://scenes/f_display.tscn" id="6_q1hn5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_hla8g"]
atlas = ExtResource("1_hla8g")
region = Rect2(100, 300, 48, 48)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_syamy"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(0.76910156, 0, 0.104098074, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f2ria"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(0.9816645, 0.00084007415, 0.14766806, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_76v6i"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(0.8420203, 9.869211e-05, 0.1202429, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="FunctionEditor" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_tab_index = 0

[node name="Control" type="Control" parent="."]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2

[node name="Toolbar" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 16
script = ExtResource("1_0spem")

[node name="Control2" type="Control" parent="Toolbar"]
custom_minimum_size = Vector2(0, 4)
layout_mode = 2

[node name="Vbox" type="VBoxContainer" parent="Toolbar"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2

[node name="OpCount" type="Label" parent="Toolbar/Vbox"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_6wip8")
theme_override_font_sizes/font_size = 24
text = "OP Count: 0 / 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Hbox" type="HBoxContainer" parent="Toolbar/Vbox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="SearchInput" type="LineEdit" parent="Toolbar/Vbox/Hbox"]
visible = false
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("2_6wip8")
placeholder_text = "Search..."

[node name="ToggleSearch" type="TextureButton" parent="Toolbar/Vbox/Hbox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("2_6wip8")
texture_normal = SubResource("AtlasTexture_hla8g")

[node name="VSeparator" type="VSeparator" parent="Toolbar"]
layout_mode = 2
theme = ExtResource("2_6wip8")

[node name="SCont" type="ScrollContainer" parent="Toolbar"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_scroll_mode = 2
vertical_scroll_mode = 0

[node name="MathComps" type="HBoxContainer" parent="Toolbar/SCont"]
custom_minimum_size = Vector2(5, 5)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VSeparator2" type="VSeparator" parent="Toolbar"]
layout_mode = 2
theme = ExtResource("2_6wip8")

[node name="SCont2" type="ScrollContainer" parent="Toolbar"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
horizontal_scroll_mode = 2
vertical_scroll_mode = 0

[node name="FTypes" type="HBoxContainer" parent="Toolbar/SCont2"]
custom_minimum_size = Vector2(5, 5)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Control3" type="Control" parent="Toolbar"]
custom_minimum_size = Vector2(0, 4)
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 2
theme = ExtResource("2_6wip8")

[node name="Hbox2" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="Hbox2"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_scroll_mode = 2
vertical_scroll_mode = 2

[node name="TextureRect" type="TextureRect" parent="Hbox2/ScrollContainer"]
custom_minimum_size = Vector2(4096, 4096)
layout_mode = 2
texture = ExtResource("1_2yhh1")
expand_mode = 1
stretch_mode = 1
script = ExtResource("5_3b5a2")

[node name="Del" type="Button" parent="Hbox2/ScrollContainer/TextureRect"]
visible = false
layout_mode = 0
offset_right = 61.0
offset_bottom = 33.0
pivot_offset = Vector2(30, 32)
focus_mode = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_syamy")
theme_override_styles/pressed = SubResource("StyleBoxFlat_f2ria")
theme_override_styles/hover = SubResource("StyleBoxFlat_76v6i")
theme_override_styles/focus = SubResource("StyleBoxFlat_syamy")
text = "Delete"

[node name="FBuilder" parent="Hbox2/ScrollContainer/TextureRect" instance=ExtResource("6_q1hn5")]
layout_mode = 0
offset_left = 150.0
offset_top = 150.0
offset_right = 362.0
offset_bottom = 199.0

[node name="VSeparator" type="VSeparator" parent="Hbox2"]
layout_mode = 2
theme = ExtResource("2_6wip8")

[node name="Hbox" type="HBoxContainer" parent="Hbox2"]
layout_mode = 2

[connection signal="text_changed" from="Toolbar/Vbox/Hbox/SearchInput" to="Toolbar" method="_on_search_input_text_changed"]
[connection signal="pressed" from="Toolbar/Vbox/Hbox/ToggleSearch" to="Toolbar" method="_on_toggle_search_pressed"]
